Various improvements